avcodecmap: Add mapping for Apple Intermediate Codec

https://bugzilla.gnome.org/show_bug.cgi?id=727673